--- a/src/locales/en.po
+++ b/src/locales/en.po
@@ -11,6 +11,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n == 1 ? 0 : 1;\n"
 "MIME-Version: 1.0\n"
+"Source-Language: en\n"
 
 #: src/routes/+layout.svelte
 msgid "Berlin Skylarks Web App"
@@ -238,8 +239,6 @@ msgstr "Selected file:"
 
 #. placeholder {0}: file.name
 #. placeholder {1}: file.size
-#. placeholder {0}: file.name
-#. placeholder {1}: file.size
 #: src/lib/dp/components/forms/UserDetailsForm.svelte
 msgid "{0} ({1} bytes)"
 msgstr "{0} ({1} bytes)"
@@ -345,7 +344,6 @@ msgid "A single team can be associated to several leagues per season in BSM."
 msgstr "A single team can be associated to several leagues per season in BSM."
 
 #. placeholder {0}: favoriteTeam?.name
-#. placeholder {0}: favoriteTeam?.team.name
 #: src/routes/(tib)/favorite/+page.svelte
 msgid "The team \"{0}\" does not have a league entry in this league."
 msgstr "The team \"{0}\" does not have a league entry in this league."
@@ -396,7 +394,6 @@ msgid "Loading..."
 msgstr "Loading..."
 
 #. placeholder {0}: error.message
-#. placeholder {0}: error.message
 #: src/routes/(tib)/favorite/+page.svelte
 msgid "Error: {0}"
 msgstr "Error: {0}"
@@ -415,8 +412,6 @@ msgstr "Show external games"
 msgid "Loading matches..."
 msgstr "Loading matches..."
 
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
@@ -449,18 +444,6 @@ msgstr "Leagues"
 msgid "Loading Leagues..."
 msgstr "Loading Leagues..."
 
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
-#. placeholder {0}: error.message
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
 #. placeholder {0}: error.message
@@ -625,7 +608,6 @@ msgid "TP:"
 msgstr "TP:"
 
 #. placeholder {0}: teamName
-#. placeholder {0}: teamName
 #: src/lib/tib/components/boxscore/MatchBoxscoreOffensiveTable.svelte
 msgid "{0} (Batters)"
 msgstr "{0} (Batters)"
@@ -666,7 +648,6 @@ msgstr "AVG"
 msgid "OPS"
 msgstr "OPS"
 
-#. placeholder {0}: teamName
 #. placeholder {0}: teamName
 #: src/lib/tib/components/boxscore/MatchBoxscorePitchingTable.svelte
 msgid "{0} (Pitchers)"
@@ -1003,8 +984,6 @@ msgstr "<0/> Make Admin"
 
 #. placeholder {0}: row.first_name + " " + row.last_name
 #. placeholder {1}: team.name
-#. placeholder {0}: row.first_name + " " + row.last_name
-#. placeholder {1}: team.name
 #: src/lib/dp/components/team/TeamMembersTableContent.svelte
 msgid "Are you sure you wish to remove \"{0}\" from \"{1}\"?"
 msgstr "Are you sure you wish to remove \"{0}\" from \"{1}\"?"
@@ -1057,12 +1036,10 @@ msgid "Playoff Series"
 msgstr "Playoff Series"
 
 #. placeholder {0}: playoffSeries.leading_team.name
-#. placeholder {0}: playoffSeries.leading_team.name
 #: src/lib/tib/components/favorite/PlayoffSheet.svelte
 msgid "{0} lead series"
 msgstr "{0} lead series"
 
-#. placeholder {0}: playoffSeries.leading_team.name
 #. placeholder {0}: playoffSeries.leading_team.name
 #: src/lib/tib/components/favorite/PlayoffSheet.svelte
 msgid "{0} win series"
@@ -1072,7 +1049,6 @@ msgstr "{0} win series"
 msgid "Series tied"
 msgstr "Series tied"
 
-#. placeholder {0}: playoffSeries.series_length
 #. placeholder {0}: playoffSeries.series_length
 #: src/lib/tib/components/favorite/PlayoffSheet.svelte
 msgid "Length of series: Best of {0}"
@@ -1127,7 +1103,6 @@ msgstr "Edit Announcement"
 msgid "Create new"
 msgstr "Create new"
 
-#. placeholder {0}: form?.title
 #. placeholder {0}: form?.title
 #: src/lib/dp/components/forms/AnnouncementForm.svelte
 msgid "Edit Announcement \"{0}\""
@@ -1203,7 +1178,6 @@ msgid "Create a Club"
 msgstr "Create a Club"
 
 #. placeholder {0}: form?.name
-#. placeholder {0}: form?.name
 #: src/lib/dp/components/forms/ClubForm.svelte
 msgid "Edit Club \"{0}\""
 msgstr "Edit Club \"{0}\""
@@ -1258,7 +1232,6 @@ msgstr "It is not possible to remove the last admin from a club. <0/> Caution: Y
 msgid "Event"
 msgstr "Event"
 
-#. placeholder {0}: form?.title
 #. placeholder {0}: form?.title
 #: src/lib/dp/components/forms/EventForm.svelte
 msgid "Edit Event \"{0}\""
@@ -1323,12 +1296,10 @@ msgid "Event Series"
 msgstr "Event Series"
 
 #. placeholder {0}: eventSeries.title
-#. placeholder {0}: eventSeries.title
 #: src/lib/dp/components/forms/EventSeriesForm.svelte
 msgid "Edit Event Series \"{0}\""
 msgstr "Edit Event Series \"{0}\""
 
-#. placeholder {0}: team.name
 #. placeholder {0}: team.name
 #: src/lib/dp/components/forms/EventSeriesForm.svelte
 msgid "Create new Event Series for {0}"
@@ -1365,7 +1336,6 @@ msgstr "Duration <0/> <1>Duration of each event to determine end time (in minute
 msgid "Location"
 msgstr "Location"
 
-#. placeholder {0}: form?.address_addon ?? form?.internal_name
 #. placeholder {0}: form?.address_addon ?? form?.internal_name
 #: src/lib/dp/components/forms/LocationForm.svelte
 msgid "Edit Location \"{0}\""
@@ -1456,7 +1426,6 @@ msgid "Edit Player Data"
 msgstr "Edit Player Data"
 
 #. placeholder {0}: `${authRecord.first_name} ${authRecord.last_name}`
-#. placeholder {0}: `${authRecord.first_name} ${authRecord.last_name}`
 #: src/lib/dp/components/forms/PlayerDataForm.svelte
 msgid "Edit Player Data for \"{0}\""
 msgstr "Edit Player Data for \"{0}\""
@@ -1526,7 +1495,6 @@ msgstr "Team"
 msgid "Edit Team"
 msgstr "Edit Team"
 
-#. placeholder {0}: form?.name
 #. placeholder {0}: form?.name
 #: src/lib/dp/components/forms/TeamForm.svelte
 msgid "Edit Team \"{0}\""
@@ -1844,12 +1812,10 @@ msgid "Add Members"
 msgstr "Add Members"
 
 #. placeholder {0}: team.name
-#. placeholder {0}: team.name
 #: src/lib/dp/components/team/TeamAddMemberButton.svelte
 msgid "Add Members to team \"{0}\""
 msgstr "Add Members to team \"{0}\""
 
-#. placeholder {0}: club.name
 #. placeholder {0}: club.name
 #: src/lib/dp/components/team/TeamAddMemberButton.svelte
 msgid "Select all {0} members that should be added to the team."
@@ -1864,18 +1830,15 @@ msgid "Select Team:"
 msgstr "Select Team:"
 
 #. placeholder {0}: modelName
-#. placeholder {0}: modelName
 #: src/lib/dp/components/utils/DeleteButton.svelte
 msgid "Are you sure you wish to delete this {0}? In most cases, data cannot be recovered after deletion. Please be certain."
 msgstr "Are you sure you wish to delete this {0}? In most cases, data cannot be recovered after deletion. Please be certain."
 
 #. placeholder {0}: itemName
-#. placeholder {0}: itemName
 #: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 msgid "You cannot remove the last {0}!"
 msgstr "You cannot remove the last {0}!"
 
-#. placeholder {0}: itemName
 #. placeholder {0}: itemName
 #: src/lib/dp/components/formElements/MultiSelectCombobox.svelte
 msgid "Select to add as {0}:"
@@ -2007,8 +1970,6 @@ msgstr "Umpire Licenses"
 
 #. placeholder {0}: batting.person?.first_name
 #. placeholder {1}: batting.person?.last_name
-#. placeholder {0}: batting.person?.first_name
-#. placeholder {1}: batting.person?.last_name
 #: src/routes/(tib)/players/[id]/+page.svelte
 msgid "Player Profile for {0} {1}"
 msgstr "Player Profile for {0} {1}"
@@ -2017,7 +1978,6 @@ msgstr "Player Profile for {0} {1}"
 msgid "Profile Data"
 msgstr "Profile Data"
 
-#. placeholder {0}: error.message
 #. placeholder {0}: error.message
 #: src/routes/(tib)/players/[id]/+page.svelte
 msgid "An error occurred fetching player data: {0}.<0/> The data source might be temporarily unavailable, please try again later."
@@ -2028,7 +1988,6 @@ msgstr "An error occurred fetching player data: {0}.<0/> The data source might b
 msgid "Stats"
 msgstr "Stats"
 
-#. placeholder {0}: data.teamName ?? "Team"
 #. placeholder {0}: data.teamName ?? "Team"
 #: src/routes/(tib)/league_entries/[entry]/+page.svelte
 msgid "Stats for {0}"
@@ -2057,8 +2016,6 @@ msgstr "Tabelle"
 
 #. placeholder {0}: clubTeam.name
 #. placeholder {1}: clubTeam.season
-#. placeholder {0}: clubTeam.team.name
-#. placeholder {1}: clubTeam.team.season
 #: src/routes/(tib)/teams/[id]/+page.svelte
 msgid "{0} (Saison {1})"
 msgstr "{0} (Saison {1})"
@@ -2117,7 +2074,6 @@ msgstr "Valid until"
 msgid "Relative Time"
 msgstr "Relative Time"
 
-#. placeholder {0}: level
 #. placeholder {0}: level
 #: src/lib/tib/components/club/licenses/LicenseLevelIndicator.svelte
 msgid "License level {0}:"
@@ -2222,7 +2178,6 @@ msgid "Manage Event Series"
 msgstr "Manage Event Series"
 
 #. placeholder {0}: team?.name
-#. placeholder {0}: team?.name
 #: src/lib/dp/components/event/EventSeriesView.svelte
 msgid "Manage Event Series for {0}"
 msgstr "Manage Event Series for {0}"
@@ -2272,8 +2227,6 @@ msgstr "Comment/Reason:"
 
 #. placeholder {0}: participation?.expand?.user?.first_name
 #. placeholder {1}: participation?.expand?.user?.last_name
-#. placeholder {0}: participation?.expand?.user?.first_name
-#. placeholder {1}: participation?.expand?.user?.last_name
 #: src/lib/dp/components/event/IndividualParticipationEditButton.svelte
 msgid ""
 "Edit participation data\n"
@@ -2282,7 +2235,6 @@ msgstr ""
 "Edit participation data\n"
 "for {0} {1}"
 
-#. placeholder {0}: eventSeries.interval
 #. placeholder {0}: eventSeries.interval
 #: src/lib/dp/components/eventseries/EventSeriesListItem.svelte
 msgid "every {0} days"
@@ -2301,7 +2253,6 @@ msgid "Event Duration:"
 msgstr "Event Duration:"
 
 #. placeholder {0}: eventSeries.duration
-#. placeholder {0}: eventSeries.duration
 #: src/lib/dp/components/eventseries/EventSeriesListItem.svelte
 msgid "{0} Minutes"
 msgstr "{0} Minutes"
@@ -2314,7 +2265,6 @@ msgstr "Attendance Stats"
 msgid "Events where you did not select anything are counted as \"out\"."
 msgstr "Events where you did not select anything are counted as \"out\"."
 
-#. placeholder {0}: title
 #. placeholder {0}: title
 #: src/lib/dp/components/stats/AttendanceTotalStatsBlock.svelte
 msgid "Totals - {0}"
@@ -2334,7 +2284,6 @@ msgstr ""
 msgid "Setup Games Import"
 msgstr "Setup Games Import"
 
-#. placeholder {0}: team.name
 #. placeholder {0}: team.name
 #: src/lib/dp/components/team/TeamAdminSection.svelte
 msgid "Games Import Setup for {0}"
@@ -2384,7 +2333,6 @@ msgid "BSM-Liga (für aktuelle Saison)"
 msgstr "BSM-Liga (für aktuelle Saison)"
 
 #. placeholder {0}: uniformSet.name
-#. placeholder {0}: uniformSet.name
 #: src/lib/dp/components/uniformset/UniformSetInfoCard.svelte
 msgid "Edit Uniform Set \"{0}\""
 msgstr "Edit Uniform Set \"{0}\""
@@ -2433,14 +2381,10 @@ msgstr "Edit User Data:"
 
 #. placeholder {0}: model.first_name
 #. placeholder {1}: model.last_name
-#. placeholder {0}: model.first_name
-#. placeholder {1}: model.last_name
 #: src/lib/dp/components/user/UserDataCard.svelte
 msgid "Change email address for {0} {1}"
 msgstr "Change email address for {0} {1}"
 
-#. placeholder {0}: model.first_name
-#. placeholder {1}: model.last_name
 #. placeholder {0}: model.first_name
 #. placeholder {1}: model.last_name
 #: src/lib/dp/components/user/UserDataCard.svelte
@@ -2455,8 +2399,6 @@ msgstr "Close"
 msgid "My Player Data"
 msgstr "My Player Data"
 
-#. placeholder {0}: user?.first_name
-#. placeholder {1}: user?.last_name
 #. placeholder {0}: user?.first_name
 #. placeholder {1}: user?.last_name
 #: src/routes/(dp)/(protected)/stats/[user]/+page.svelte
@@ -2498,7 +2440,6 @@ msgid "Official Details"
 msgstr "Official Details"
 
 #. placeholder {0}: match.match_id
-#. placeholder {0}: match.match_id
 #: src/routes/(tib)/gamecenter/game-detail/[id]/+page.svelte
 msgid "Details zu Spiel {0}"
 msgstr "Details zu Spiel {0}"
@@ -2521,7 +2462,6 @@ msgid "No Game Report available."
 msgstr "No Game Report available."
 
 #. placeholder {0}: error.message
-#. placeholder {0}: error.message
 #: src/routes/(tib)/gamecenter/game-detail/[id]/+page.svelte
 msgid "error loading Game Report: {0}"
 msgstr "error loading Game Report: {0}"
@@ -2536,8 +2476,6 @@ msgstr "Sharing games does not work on Firefox."
 
 #. placeholder {0}: data.leagueGroup.name
 #. placeholder {1}: data.leagueGroup.season
-#. placeholder {0}: data.leagueGroup.name
-#. placeholder {1}: data.leagueGroup.season
 #: src/routes/(tib)/ligen/[id]/stats/+page.svelte
 msgid "Leaderboards for {0} ({1})"
 msgstr "Leaderboards for {0} ({1})"
@@ -2546,7 +2484,6 @@ msgstr "Leaderboards for {0} ({1})"
 msgid "Team:"
 msgstr "Team:"
 
-#. placeholder {0}: $announcement.link
 #. placeholder {0}: $announcement.link
 #: src/routes/(dp)/(protected)/account/announcements/[announcement]/+page.svelte
 msgid "Link associated with this announcement: {0}"
@@ -2565,7 +2502,6 @@ msgstr "Admin Options"
 msgid "Delete Announcement"
 msgstr "Delete Announcement"
 
-#. placeholder {0}: club.name
 #. placeholder {0}: club.name
 #: src/routes/(dp)/(protected)/account/clubs/[club]/+page.svelte
 msgid "Club overview page for the {0} with info about teams and uniform sets."
@@ -2651,24 +2587,20 @@ msgid "Player List"
 msgstr "Player List"
 
 #. placeholder {0}: club.name
-#. placeholder {0}: club.name
 #: src/routes/(dp)/(protected)/account/clubs/[club]/locations/+page.svelte
 msgid "All configured locations for {0}, including baseball fields and other venues."
 msgstr "All configured locations for {0}, including baseball fields and other venues."
 
-#. placeholder {0}: club.name
 #. placeholder {0}: club.name
 #: src/routes/(dp)/(protected)/account/clubs/[club]/locations/+page.svelte
 msgid "{0} - Locations"
 msgstr "{0} - Locations"
 
 #. placeholder {0}: data.team.name
-#. placeholder {0}: data.team.name
 #: src/routes/(dp)/(protected)/account/team/[id]/members/+page.svelte
 msgid "Team member list for {0}."
 msgstr "Team member list for {0}."
 
-#. placeholder {0}: data.team.name
 #. placeholder {0}: data.team.name
 #: src/routes/(dp)/(protected)/account/team/[id]/members/+page.svelte
 msgid "Team members for Team \"{0}\""
@@ -2717,7 +2649,6 @@ msgstr ""
 "setting the end date accordingly and create a new series."
 
 #. placeholder {0}: modelName
-#. placeholder {0}: modelName
 #: src/lib/dp/service/ToastController.svelte.ts
 msgid "An error occurred while saving {0} data."
 msgstr "An error occurred while saving {0} data."
@@ -2764,7 +2695,6 @@ msgstr "There is no data to display for the selected filters."
 msgid "An error occurred while saving the event."
 msgstr "An error occurred while saving the event."
 
-#. placeholder {0}: season
 #. placeholder {0}: season
 #: src/lib/dp/components/stats/AttendanceTotalStatsBlock.svelte
 msgid "All possible events of this type for {0}"
